--- a/src/main/resources/style/MainPane.css
+++ b/src/main/resources/style/MainPane.css
@@ -1,37 +1,39 @@
-Button {
+.main{
+}
+.main Button {
 	-fx-padding:4 12;
 	-fx-font-size:16;
 	-fx-background-radius:0;
 }
-TableView {
-	-fx-font-size:16;
-	-fx-overflow:hidden;
-}
-Label {
+.main Label {
 	-fx-padding:6 12;
 	-fx-font-size:12;
 }
-#name {
+.main TableView {
+	-fx-font-size:16;
+	-fx-overflow:hidden;
+}
+.main .name {
 	-fx-min-width:198;
 	-fx-max-width:198;
 	-fx-pref-width:198;
 }
-#status {
+.main .status {
 	-fx-min-width:100;
 	-fx-max-width:100;
 	-fx-pref-width:100;
 }
-#progress {
+.main .progress {
 	-fx-min-width:200;
 	-fx-max-width:200;
 	-fx-pref-width:200;
 }
-#begin {
+.main .begin {
 	-fx-min-width:250;
 	-fx-max-width:250;
 	-fx-pref-width:250;
 }
-#end {
+.main .end {
 	-fx-min-width:250;
 	-fx-max-width:250;
 	-fx-pref-width:250;
