--- a/src/main/resources/fxml/MainPane.fxml
+++ b/src/main/resources/fxml/MainPane.fxml
@@ -6,7 +6,11 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.control.*?>
 
-<BorderPane fx:controller="com.acgist.snail.window.main.MainController" stylesheets="@/style/MainPane.css" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml">
+<BorderPane
+	styleClass="main" stylesheets="@/style/MainPane.css"
+	fx:controller="com.acgist.snail.window.main.MainController"
+	xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml">
+	
 	<top>
 		<HBox>
 			<Button fx:id="build" text="新建" onAction="#handleBuildAction" />
@@ -17,37 +21,39 @@
 			<Button fx:id="setting" text="设置" onAction="#handleSettingAction" />
 		</HBox>
 	</top>
+	
 	<center>
 		<TableView fx:id="downloadList">
 			<columns>
 				<!--
 				下载文件名称：轻音少女（点击名称查看详情）
 				-->
-				<TableColumn fx:id="name" text="名称" />
+				<TableColumn fx:id="name" text="名称" styleClass="name" />
 				<!--
 				任务状态：
 					下载中：100KB/S
 					暂停：暂停
 					完成：完成
 				-->
-				<TableColumn fx:id="status" text="状态" />
+				<TableColumn fx:id="status" text="状态" styleClass="status" />
 				<!--
 				下载进度：
 					下载中：20%（2G/4G）
 					完成：100%（4G）
 				-->
-				<TableColumn fx:id="progress" text="进度" />
+				<TableColumn fx:id="progress" text="进度" styleClass="progress" />
 				<!--
 				开始时间：2019-01-01 12:10
 				-->
-				<TableColumn fx:id="begin" text="开始时间" />
+				<TableColumn fx:id="begin" text="开始时间" styleClass="begin" />
 				<!--
 				完成时间：2019-01-01 12:10
 				-->
-				<TableColumn fx:id="end" text="完成时间" />
+				<TableColumn fx:id="end" text="完成时间" styleClass="end" />
 			</columns>
 		</TableView>
 	</center>
+	
 	<bottom>
 		<HBox>
 			<Button fx:id="all" text="全部" onAction="#handleAllAction" />
@@ -57,4 +63,5 @@
 			<Label fx:id="speed" text="200KB/S" />
 		</HBox>
 	</bottom>
+	
 </BorderPane>
