--- a/src/main/resources/fxml/AboutPane.fxml
+++ b/src/main/resources/fxml/AboutPane.fxml
@@ -6,8 +6,9 @@
 <?import javafx.scene.control.*?>
 
 <GridPane
-	styleClass="about" stylesheets="@/style/AboutPane.css"
+	fx:id="root"
 	hgap="7" vgap="3"
+	styleClass="about" stylesheets="@/style/AboutPane.css"
 	fx:controller="com.acgist.snail.window.about.AboutController"
 	xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml">
 	
