--- a/src/main/resources/fxml/MainPane.fxml
+++ b/src/main/resources/fxml/MainPane.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.control.*?>
 
 <BorderPane
+	fx:id="root"
 	styleClass="main" stylesheets="@/style/MainPane.css"
 	fx:controller="com.acgist.snail.window.main.MainController"
 	xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml">
@@ -23,7 +24,7 @@
 	</top>
 	
 	<center>
-		<TableView fx:id="downloadList">
+		<TableView fx:id="taskTable">
 			<columns>
 				<!--
 				下载文件名称：轻音少女（点击名称查看详情）
