--- a/src/main/resources/fxml/SettingPane.fxml
+++ b/src/main/resources/fxml/SettingPane.fxml
@@ -13,15 +13,16 @@
 	
 	<ScrollPane fx:id="scrollPane" styleClass="scrollPane" hbarPolicy="AS_NEEDED">
 		<VBox>
-			<HBox>
+			<HBox styleClass="path">
 				<TextFlow styleClass="name">
 					<Label>
 						下载目录：
 					</Label>
 				</TextFlow>
-				<Text fx:id="about">
-					蜗牛（Snail）
-				</Text>
+				<Button fx:id="path" text="选择目录" onAction="#handlePathAction" />
+				<TextFlow styleClass="pathValue">
+					<Text fx:id="pathValue" />
+				</TextFlow>
 			</HBox>
 			
 			<HBox>
@@ -30,9 +31,7 @@
 						同时下载任务数量：
 					</Label>
 				</TextFlow>
-				<Text fx:id="about">
-					Java
-				</Text>
+				<Slider fx:id="size" styleClass="slider" min="0" max="8" value="2" blockIncrement="1" majorTickUnit="1" minorTickCount="1" showTickLabels="true" showTickMarks="true" />
 			</HBox>
 			
 			<HBox>
@@ -41,9 +40,7 @@
 						单个任务下载速度：
 					</Label>
 				</TextFlow>
-				<Text fx:id="about">
-					JavaFX
-				</Text>
+				<Slider fx:id="buffer" styleClass="slider" min="0" max="10240" value="2048" blockIncrement="1024" majorTickUnit="1024" minorTickCount="1" showTickLabels="true" showTickMarks="true" />
 			</HBox>
 				
 			<HBox>
@@ -52,31 +49,16 @@
 						下载完成弹出提示：
 					</Label>
 				</TextFlow>
-				<Text fx:id="about">
-					JavaFX
-				</Text>
+				<CheckBox fx:id="notice" onAction="#handleNoticeAction" />
 			</HBox>
 			
-			<HBox>
-				<TextFlow styleClass="name">
-					<Label>
-						下载缓存：
-					</Label>
-				</TextFlow>
-				<Text fx:id="about">
-					JavaFX
-				</Text>
-			</HBox>
-		
 			<HBox>	
 				<TextFlow styleClass="name">
 					<Label>
 						启用P2P加速：
 					</Label>
 				</TextFlow>
-				<Text fx:id="about">
-					JavaFX
-				</Text>
+				<CheckBox fx:id="p2p" onAction="#handleP2pAction" />
 			</HBox>
 		</VBox>
 	</ScrollPane>
