--- a/src/main/resources/fxml/MainPane.fxml
+++ b/src/main/resources/fxml/MainPane.fxml
@@ -13,7 +13,7 @@
 	xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml">
 	
 	<top>
-		<HBox>
+		<HBox fx:id="header" styleClass="header">
 			<Button fx:id="build" text="新建" onAction="#handleBuildAction" />
 			<Button fx:id="start" text="开始" onAction="#handleStartAction" />
 			<Button fx:id="pause" text="暂停" onAction="#handlePauseAction" />
@@ -56,12 +56,16 @@
 	</center>
 	
 	<bottom>
-		<HBox>
-			<Button fx:id="all" text="全部" onAction="#handleAllAction" />
-			<Button fx:id="downloading" text="下载中" onAction="#handleDownloadingAction" />
-			<Button fx:id="complete" text="下载完成" onAction="#handleCompleteAction" />
-			<Label fx:id="speed" text="10" />
-			<Label fx:id="speed" text="200KB/S" />
+		<HBox fx:id="fooder" styleClass="fooder">
+			<HBox fx:id="fooderButton" styleClass="fooderButton">
+				<Button fx:id="all" text="全部" onAction="#handleAllAction" />
+				<Button fx:id="downloading" text="下载中" onAction="#handleDownloadingAction" />
+				<Button fx:id="complete" text="下载完成" onAction="#handleCompleteAction" />
+			</HBox>
+			<HBox fx:id="fooderStatus" styleClass="fooderStatus">
+				<Label fx:id="speed" text="10" />
+				<Label fx:id="speed" text="200KB/S" />
+			</HBox>
 		</HBox>
 	</bottom>
 	
