--- a/src/main/resources/style/MainPane.css
+++ b/src/main/resources/style/MainPane.css
@@ -1,14 +1,38 @@
 .main{
+	-fx-font-size:16;
+}
+.main .header {
+	-fx-padding:2;
+	-fx-pref-height:40;
+	-fx-alignment:center_left;
+}
+.main .fooder {
+	-fx-padding:2;
+	-fx-pref-height:40;
+}
+.main .fooder .fooderButton {
+	-fx-alignment:center_left;
+}
+.main .fooder .fooderStatus {
+	-fx-alignment:center_right;
 }
 .main Button {
 	-fx-padding:4 12;
-	-fx-font-size:16;
 	-fx-background-radius:0;
 }
 .main Label {
 	-fx-padding:6 12;
-	-fx-font-size:12;
+	-fx-font-size:14;
 }
-.main TableView {
-	-fx-font-size:16;
+.main TableView HBox {
+	-fx-padding:4;
+	-fx-pref-height:40;
+}
+.main TableRow:selected Text {
+	-fx-fill:white;
+}
+/**糟糕的配置隐藏水平滚动*/
+.table-view > .virtual-flow > .scroll-bar:horizontal {
+	-fx-opacity:0;
+	-fx-padding:-10;
 }
