--- a/src/main/resources/style/BuildPane.css
+++ b/src/main/resources/style/BuildPane.css
@@ -2,13 +2,13 @@
 	-fx-font-size:16;
 	-fx-alignment:center;
 }
-.build .pathValue {
+.build .urlValue {
 	-fx-padding:10 0;
 }
-.build .pathValue TextFlow {
+.build .urlValue TextFlow {
 	-fx-padding:0 10 0 0;
 }
-.build .pathValue TextField {
+.build .urlValue TextField {
 	-fx-pref-width:400;
 }
 .build .option {
