--- a/src/main/resources/fxml/main.fxml
+++ b/src/main/resources/fxml/main.fxml
@@ -61,7 +61,7 @@
 		<HBox fx:id="footer" styleClass="footer">
 			<HBox fx:id="footerButton" styleClass="footerButton">
 				<Button fx:id="all" text="全部" onAction="#handleAllAction" />
-				<Button fx:id="downloading" text="下载中" onAction="#handleDownloadingAction" />
+				<Button fx:id="download" text="下载中" onAction="#handleDownloadAction" />
 				<Button fx:id="complete" text="下载完成" onAction="#handleCompleteAction" />
 			</HBox>
 			<HBox fx:id="footerStatus" styleClass="footerStatus">
