--- a/src/main/resources/fxml/main.fxml
+++ b/src/main/resources/fxml/main.fxml
@@ -65,23 +65,10 @@
 				<Button fx:id="complete" text="下载完成" onAction="#handleCompleteAction" />
 			</HBox>
 			<HBox fx:id="footerStatus" styleClass="footerStatus">
-				<Label fx:id="downloadSize" text="10">
-					<tooltip>
-						<Tooltip text="下载任务数量" />
-					</tooltip>
-				</Label>
-				<Label text="↓" />
-				<Label fx:id="downloadBuffer" text="200KB/S">
-					<tooltip>
-						<Tooltip text="下载速度" />
-					</tooltip>
-				</Label>
-				<Label text="↑" />
-				<Label fx:id="shareBuffer" text="200KB/S">
-					<tooltip>
-						<Tooltip text="上传速度" />
-					</tooltip>
-				</Label>
+				<Label text="下载速度：" />
+				<Label fx:id="downloadBuffer" text="0KB/S" />
+				<Label text="上传速度：" />
+				<Label fx:id="shareBuffer" text="0KB/S" />
 			</HBox>
 		</HBox>
 	</bottom>
