--- a/src/main/resources/style/fxml.css
+++ b/src/main/resources/style/fxml.css
@@ -2,6 +2,18 @@
 .root {
 	-fx-font-size:16;
 	-fx-alignment:center;
+	/**
+	-fx-background-insets:0;
+	-fx-background-color:#F4F4F4;
+	*/
+	/**
+	选中填充颜色
+	-fx-accent:transparent;
+	*/
+	/**
+	选中边框颜色
+	-fx-focus-color:transparent;
+	*/
 }
 .root .tooltip {
 	-fx-background-radius:0;
@@ -30,6 +42,12 @@
 }
 .main .footer .footerStatus Label {
 	-fx-padding:0 2;
+}
+.main .taskTable {
+	-fx-padding:0;
+	-fx-border-width:1px;
+	-fx-border-color:#c8c8c8;
+	-fx-background-insets:0;
 }
 .main .taskTable HBox {
 	-fx-padding:4;
