优化配置、readme、about描述

--- a/src/main/resources/fxml/about.fxml
+++ b/src/main/resources/fxml/about.fxml
@@ -19,10 +19,10 @@
 		语言：Java
 	</Text>
 	<Text fx:id="frame" GridPane.columnIndex="0" GridPane.rowIndex="2" GridPane.columnSpan="3">
-		框架：JavaFX
+		GUI框架：JavaFX
 	</Text>
 	<Text fx:id="description" GridPane.columnIndex="0" GridPane.rowIndex="3" GridPane.columnSpan="3">
-		功能：下载（BT、FTP、HTTP、ED2K）
+		支持协议：BT、FTP、HTTP、ED2K
 	</Text>
 	<Text fx:id="copyright" GridPane.columnIndex="0" GridPane.rowIndex="4" GridPane.columnSpan="3">
 		版权：Copyright © 2019 ACGIST. All Rights Reserved.
