--- a/src/main/resources/fxml/about.fxml
+++ b/src/main/resources/fxml/about.fxml
@@ -9,7 +9,7 @@
 	fx:id="root"
 	hgap="7" vgap="3"
 	styleClass="root,about" stylesheets="@/style/fxml.css"
-	fx:controller="com.acgist.snail.window.about.AboutController"
+	fx:controller="com.acgist.snail.gui.about.AboutController"
 	xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml">
 	
 	<Text fx:id="name" GridPane.columnIndex="0" GridPane.rowIndex="0" GridPane.columnSpan="3">
