--- a/src/main/resources/fxml/torrent.fxml
+++ b/src/main/resources/fxml/torrent.fxml
@@ -8,7 +8,7 @@
 <FlowPane
 	fx:id="root"
 	styleClass="root,torrent" stylesheets="@/style/fxml.css"
-	fx:controller="com.acgist.snail.window.torrent.TorrentController"
+	fx:controller="com.acgist.snail.gui.torrent.TorrentController"
 	xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml">
 	
 	<VBox fx:id="treeBox"></VBox>
