--- a/src/main/resources/fxml/main.fxml
+++ b/src/main/resources/fxml/main.fxml
@@ -10,7 +10,7 @@
 <BorderPane
 	fx:id="root"
 	styleClass="root,main" stylesheets="@/style/fxml.css"
-	fx:controller="com.acgist.snail.window.main.MainController"
+	fx:controller="com.acgist.snail.gui.main.MainController"
 	xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml">
 	
 	<top>
