--- a/src/main/resources/fxml/setting.fxml
+++ b/src/main/resources/fxml/setting.fxml
@@ -8,7 +8,7 @@
 <FlowPane
 	fx:id="root"
 	styleClass="root,setting" stylesheets="@/style/fxml.css"
-	fx:controller="com.acgist.snail.window.setting.SettingController"
+	fx:controller="com.acgist.snail.gui.setting.SettingController"
 	xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml">
 	
 	<ScrollPane fx:id="scrollPane" styleClass="scrollPane" hbarPolicy="AS_NEEDED">
