--- a/src/main/resources/fxml/about.fxml
+++ b/src/main/resources/fxml/about.fxml
@@ -15,21 +15,27 @@
 	<Text fx:id="name" GridPane.columnIndex="0" GridPane.rowIndex="0" GridPane.columnSpan="3">
 		名称：蜗牛（Snail）
 	</Text>
-	<Text fx:id="language" GridPane.columnIndex="0" GridPane.rowIndex="1" GridPane.columnSpan="3">
+	
+	<Text fx:id="lang" GridPane.columnIndex="0" GridPane.rowIndex="1" GridPane.columnSpan="3">
 		语言：Java
 	</Text>
-	<Text fx:id="frame" GridPane.columnIndex="0" GridPane.rowIndex="2" GridPane.columnSpan="3">
+	
+	<Text fx:id="gui" GridPane.columnIndex="0" GridPane.rowIndex="2" GridPane.columnSpan="3">
 		GUI框架：JavaFX
 	</Text>
+	
 	<Text fx:id="description" GridPane.columnIndex="0" GridPane.rowIndex="3" GridPane.columnSpan="3">
 		支持协议：BT、FTP、HTTP、ED2K
 	</Text>
+	
 	<Text fx:id="copyright" GridPane.columnIndex="0" GridPane.rowIndex="4" GridPane.columnSpan="3">
 		版权：Copyright © 2019 ACGIST. All Rights Reserved.
 	</Text>
+	
 	<Text fx:id="license" GridPane.columnIndex="0" GridPane.rowIndex="5" GridPane.columnSpan="3">
 		开源协议：BSD-3-Clause
 	</Text>
+	
 	<Button fx:id="author" text="作者" onAction="#handleAuthorAction" GridPane.columnIndex="0" GridPane.rowIndex="6" />
 	<Button fx:id="source" text="官网与源码" onAction="#handleSourceAction" GridPane.columnIndex="1" GridPane.rowIndex="6" />
 	<Button fx:id="support" text="问题与建议" onAction="#handleSupportAction" GridPane.columnIndex="2" GridPane.rowIndex="6" />
