--- a/src/main/resources/fxml/about.fxml
+++ b/src/main/resources/fxml/about.fxml
@@ -11,32 +11,36 @@
 	styleClass="root,about" stylesheets="@/style/fxml.css"
 	fx:controller="com.acgist.snail.gui.about.AboutController"
 	xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml">
+
+	<TextFlow GridPane.columnIndex="0" GridPane.rowIndex="0" GridPane.columnSpan="3">
+		<Label>软件名称：</Label>
+		<Text fx:id="name">蜗牛（Snail）</Text>
+	</TextFlow>	
+
+	<TextFlow GridPane.columnIndex="0" GridPane.rowIndex="1" GridPane.columnSpan="3">
+		<Label>软件版本：</Label>
+		<Text fx:id="version">1.0.0</Text>
+	</TextFlow>	
 	
-	<Text fx:id="name" GridPane.columnIndex="0" GridPane.rowIndex="0" GridPane.columnSpan="3">
-		名称：蜗牛（Snail）
-	</Text>
+	<TextFlow GridPane.columnIndex="0" GridPane.rowIndex="2" GridPane.columnSpan="3">
+		<Label>开发语言：</Label>
+		<Text>Java</Text>
+	</TextFlow>
 	
-	<Text fx:id="lang" GridPane.columnIndex="0" GridPane.rowIndex="1" GridPane.columnSpan="3">
-		语言：Java
-	</Text>
+	<TextFlow GridPane.columnIndex="0" GridPane.rowIndex="3" GridPane.columnSpan="3">
+		<Label>GUI框架：</Label>
+		<Text>JavaFX</Text>
+	</TextFlow>
 	
-	<Text fx:id="gui" GridPane.columnIndex="0" GridPane.rowIndex="2" GridPane.columnSpan="3">
-		GUI框架：JavaFX
-	</Text>
+	<TextFlow GridPane.columnIndex="0" GridPane.rowIndex="4" GridPane.columnSpan="3">
+		<Label>开源协议：</Label>
+		<Text>BSD-3-Clause</Text>
+	</TextFlow>
 	
-	<Text fx:id="license" GridPane.columnIndex="0" GridPane.rowIndex="3" GridPane.columnSpan="3">
-		开源协议：BSD-3-Clause
-	</Text>
-	
-	<Text fx:id="description" GridPane.columnIndex="0" GridPane.rowIndex="4" GridPane.columnSpan="3">
-		支持协议：BT（BitTorrent）、FTP、HTTP
-	</Text>
-	
-	<!--
-	<Text fx:id="copyright" GridPane.columnIndex="0" GridPane.rowIndex="5" GridPane.columnSpan="3">
-		版权：Copyright © 2019 ACGIST. All Rights Reserved.
-	</Text>
-	-->
+	<TextFlow GridPane.columnIndex="0" GridPane.rowIndex="5" GridPane.columnSpan="3">
+		<Label>下载协议：</Label>
+		<Text>BT（BitTorrent）、FTP、HTTP</Text>
+	</TextFlow>
 	
 	<Button fx:id="author" text="作者" onAction="#handleAuthorAction" GridPane.columnIndex="0" GridPane.rowIndex="6" />
 	<Button fx:id="source" text="官网与源码" onAction="#handleSourceAction" GridPane.columnIndex="1" GridPane.rowIndex="6" />
